# milla

./: .gitignore  .golangci.yml  Dockerfile  Dockerfile_debug  Dockerfile_distroless  Dockerfile_distroless_vendored  Dockerfile_scratch_vendored  README.md  a2as.yaml  config-example.toml  defaults.go  docker-compose-postgres.yaml  docker-compose.yaml  gemini.go  ghost.go  go.mod  go.sum  iana_whois.go  main.go  makefile  ollama.go  openai.go  openrouter.go  plugins.go  plugins_test.go  rss.go  shell.nix  types.go  useragents.go  utils.go
.github/workflows/: docker.yaml  go_build.yaml
plugins/: euvd.lua  hello.lua  ip.lua  proxy_test.lua  repology.lua  robtex.lua  rss.lua  rss.yaml  test.lua  urban.lua
prettier/: Dockerfile  package-lock.json  package.json  server.js
runpod/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml  test.sh
scripts/: entry_limit_trigger.pgsql  entry_limit_trigger.sql
useragents/: Dockerfile  README.md  docker-compose.yaml  main.py  makefile  pyproject.toml
useragents/src/: current_time.py  models.py  registry.py
useragents/src/custom_agents/: web_search_tool.py
