[tool.poetry]
name = "ollama-runpod"
version = "0.1.0"
description = ""
authors = ["terminaldweller <devi@terminaldweller.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
runpod = "^1.6.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
bandit = "^1.7.7"
openai = "^1.11.1"
types-requests = "^2.31.0.20240125"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
