[project]
name = "milla"
version = "0.1.0"
description = ""
authors = [
    {name = "terminaldweller",email = "devi+github@terminaldweller.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-agents (>=0.0.4,<0.0.5)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "playwright (>=1.52.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
black = "^25.1.0"
mypy = "^1.15.0"
pylint = "^3.3.5"
bandit = "^1.8.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
